tests/integration/tests/orm/ui/fail/model_enum_integer_filter.stderr
error[E0277]: the trait bound `i64: IntoFieldValue<i32>` is not satisfied
  --> tests/orm/ui/fail/model_enum_integer_filter.rs:16:38
   |
16 |     let _ = Job::field_retry_count().eq(10_i64);
   |                                      -- ^^^^^^ the trait `IntoFieldValue<i32>` is not implemented for `i64`
   |                                      |
   |                                      required by a bound introduced by this call
   |
help: the following other types implement trait `IntoFieldValue<T>`
  --> $WORKSPACE/crates/reinhardt-db/src/orm/field_codec.rs
   |
   | impl<T: DatabaseField> IntoFieldValue<T> for &T {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&T` implements `IntoFieldValue<T>`
...
   | impl IntoFieldValue<String> for &str {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&str` implements `IntoFieldValue<std::string::String>`
note: required by a bound in `reinhardt::FieldRef::<M, T>::eq`
  --> $WORKSPACE/crates/reinhardt-db/src/orm/expressions.rs
   |
   |     pub fn eq<V>(&self, value: V) -> Filter
   |            -- required by a bound in this associated function
...
   |         V: IntoFieldValue<T>,
   |            ^^^^^^^^^^^^^^^^^ required by this bound in `FieldRef::<M, T>::eq`
